--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -2,17 +2,20 @@
 <head>
     <link rel="stylesheet" href="/css/style-account.css">
 </head>
-    <div class="block1">
+
+<main>
+  <section class="block1">
         <div class="form1">
             <h1>Sign In:</h1>
             <form action="/Account" method="POST">
                 <label class="email" for="email"><span>Email:</span></label>
-                    <input  type="email" name="email"><br><br><b><br><br></b>
+                    <input  type="email" name="email">
                 <label for="password">Password:</label>
                     <input type="password" name="password"><br>
-               <a href="/Account"><button>Sign In</button><br></a> 
-                <a href="/CreatingAccount">Create an account</a>
+               <a href="/Account"><button>Sign In</button></a> 
+                <a class="create__account" href="/CreatingAccount">Create an account</a>
 
             </form>
-        </div>
-    </div>
+        </div> 
+  </section>
+</main>
