--- a/views/download.handlebars
+++ b/views/download.handlebars
@@ -2,24 +2,26 @@
 <head>
     <link rel="stylesheet" href="css/style-download.css">
 </head>
-    <div class="block-1">
+    
+<main>
+     <section class="block-1">
         <div class="block-text">
             <h1>
                 Simplicity Meets <span>Power</span>
-            </h1><br>
+            </h1>
             <p>
                 Here you can download the Robo  3T
             </p>
             <div class="download-button">
-                <a href="#"><button  type="submit">Download Robo 3T</button></a>
+                <a href="#">Download Robo 3T</a>
             </div>
         </div>
-    </div>
-    <div class="main-text">
-        <p>
-        This website was developed by João Victor,as a training. 
-        If you want to talk to him go to Linkedin and search for 
-        "João Victor Intern at Rioprevidencia" <br> or  call this number +55 (21)976493658.<br><br><br>
-        Thank you for viewing my website and have a good day!
-        </p>
-    </div>
+            <p class="thankful">
+            This website was developed by João Victor,as a training. 
+            If you want to talk to him go to Linkedin and search for 
+            "João Victor Intern at Rioprevidencia" or call this number +55 (21)976493658. <br>
+            Thank you for viewing my website and have a good day!
+            </p>
+     </section> 
+</main>
+   
