--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,43 +1,47 @@
 <head><link rel="stylesheet" href="css/style-site.css">
-    </head>
-    <div class="block-1">
-        <div class="block-text1">
-            <h1>
-                Simplicity
-                <br>
-                meets
-                <br>
-                <span>Power</span>
-            </h1>
-            <p>
-                This site it's a example made by a student
-                <br>
-                and must not be taken seriously.
-            </p>
-        </div>
-        
-    </div>
-    <div class="block-2">
-        <div class="block-text2">
-            <ol>
-                <p>Robo 3T</p>
+</head>
+
+<main>
+     <section class="main__first--content">
+            <div class="block-text1">
+                <h1>
+                    Simplicity
+                    <br>
+                    meets
+                    <br>
+                    <span>Power</span>
+                </h1>
+                <p>
+                    This site it's a example made by a student
+                    and must not be taken seriously.
+                </p>
+            </div>
+            
+        <div class="block-2">
+             <h6>Robo 3T</h6>
+            <ul>
                 <li>Migrate databases & relations between SQL & MongoDB</li>
                 <li>Auto-complete queries with IntelliShell</li>
                 <li>Drag & drop fields to visually build queries</li>
                 <li>Use SQL to query MongoDB</li>
                 <li>Build aggregation queries stage by stage</li>
-            </ol>
+            </ul>
         </div>
-    </div>
-    <div class="download-button">
-        <button type="submit"><a href="/download">Download Robo 3T</a></button>
-    </div>
-    <div class="main-text">
+     </section>
+
+    <section class="download-button">
+        <a href="/download"><button type="submit">Download Robo 3T</button></a>
+    </section>
+
+    <section class="main-text">
         <p>
         This website was developed by João Victor,as a training. 
         If you want to talk to him go to Linkedin and search for 
         "João Victor Intern at Rioprevidencia" <br> or  call this number +55 (21)976493658.<br><br><br>
         Thank you for viewing my website and have a good day!
         </p>
-    </div>
+    </section>
     
+</main>
+   
+ 
