--- a/public/css/_menu.css
+++ b/public/css/_menu.css
@@ -1,45 +1,115 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
+    overflow-x: hidden;
+    padding: 0;
     margin: 0;
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 1.42857143;
-    max-height: 100%px;
-    max-width: 100%;
+    font-family: sans-serif;
 }
-a{
-    text-decoration: none;
-    color: inherit;
+
+main{
+    margin: 10rem 0 0 0;
 }
+
+
 /*Menu*/
-.menu ol li{
-    display: inline;
-    color: #727272;
-    font-size: 18px;
-    list-style-type: none;
+.menu{
+    position: relative;
+    left: 0;
+    padding: 10px;
+    top: 2rem;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.3rem;
 }
-.first-img img{
-    margin-top: 60px;
+
+.main__nav--brand img{
     width: 44px;
     height: 44px;
-    margin-left: 75px;
 }
-.second-ol{
-    margin-top: -36px;
-    margin-left: 88px;
+
+.main__menu--itens{
+    display: flex;
+    margin: 0;
+    padding: 0;
 }
-.third-ol{
-    height: 50px;
-    margin-left: 968px;
-    margin-top: -55px;
-    width: 500px;
-    
+
+.main__menu--itens li{
+    list-style: none;
+    margin: 0  15px;
 }
-.third-ol li{
-    margin-right: 65px;
+
+.menu a,
+.main__responsivemenu--itens li a{
+    color: #727272;
+    text-decoration: none;
 }
-.menu ol li:hover{
+
+
+.menu a:hover,
+.menu a:active{
     opacity: 0.70;
 }
-.logout{
+
+.toggle__btn{
+    width: 45px;
+    background: transparent;
+    border: none;
     cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+    display: none;
 }
+
+.toggle__btn--span{
+    width: 100%;
+    height: 2px;
+    background-color: #1fb622;
+    display: block;
+    margin: 6px 5px;
+
+}
+
+.main__nav--responsive{
+    margin: 3rem 0 ;
+    display: none;
+    width: 100vw;
+    transform: translateY(0);
+    transition: transform ease-in-out 300ms;
+}
+
+.main__responsivemenu--itens{
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.main__responsivemenu--itens li{
+    padding: 5px 0;
+}
+
+
+
+
+@media(max-width:740px){
+    
+    .toggle__btn{
+        display: block;
+    }
+
+    .main__menu--itens{
+        display: none;
+    }
+
+
+}
+
