--- a/public/css/style-account.css
+++ b/public/css/style-account.css
@@ -1,43 +1,52 @@
 
 /*Body*/
-.form1{
-    text-align: center;
-    color: #727272;
-    font-size: 24px;
-    margin-top: 200px;
+
+main{
+    margin: 11.5rem 0;
 }
+.block1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form1 h1{
+    font-size: 1.8rem;
+    color: #616060;
+    margin: 2rem 0;
+}
+
+.form1 form{
+    display: flex;
+    flex-direction: column;
+}
+
 .form1 input{
     border-radius: 5px;
-    border-color: white;
-    width: 300px;
-    height: 20px;
-    border: solid;
-    border-style: double;
+    padding: 0 8vw;
+    border:2px solid #47b648;
 }
-.form1 h1{
-    margin-top: -20px;
-    margin-bottom: 50px;
-    margin-right: 300px;
-    font-size: 28px;
-    color: #616060;
-}
+
 .email{
     color: #47b648;
 }
+
 .form1 button{
     background-color: #47b648;
     color: white;
-    height: 50px;
-    width: 250px;
-    margin-top: 40px;
+    padding: 10px 40px;
     border-radius: 5px;
     border: none;
-    font-size: 23px;
     cursor: pointer;
 }
-.form1 a {
-    font-size: 17px;
+
+.create__account {
+    font-size: 1.1rem;
+    color: #47b648;
+    margin: 5px 0;
 }
+
 .form1 a:hover{
     color: #47b648;
     text-decoration: underline;
