--- a/public/css/style-download.css
+++ b/public/css/style-download.css
@@ -1,33 +1,47 @@
 
 /*Body*/
-.block-text{
-    text-align: center;
-    margin-top: 180px;
-    font-size: 35px;
+
+main{
+    margin: 9rem 0 0 0;
+}
+
+.block-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.block-text h1{
+   padding: 2rem 0;
     color: #727272;
 }
+
 .block-text span{
     color: #47b648;
 }
+
 .block-text p {
-    margin-top: -30px;
-    font-size: 25px;
+    font-size: 1.6rem;
 }
+
 .download-button{
     text-align: center;
-    margin-top: 60px;
+    margin: 2rem 0;
     
 }
-.download-button button{
+.download-button a{
+    text-decoration: none;
     color: white;
     background-color: #1fb622;
     border-radius: 10px;
+    padding: 10px 20px;
     border: none;
-    width: 350px;   
-    height: 65px;
-    font-size: 30px;
+    font-size: 1.7rem;
 }
-.download-button button:hover{
+
+.download-button button:hover,
+.download-button button:active{
     -webkit-transform: scale(1.03);
     -moz-transform: scale(1.03);
     -o-transform: scale(1.03);
@@ -35,13 +49,22 @@
     transform: scale(1.03);
     cursor: pointer;
 }
-.main-text{
-    margin-top: 150px;
+
+.thankful{
+    margin: 3rem 0 ;
     font-size: 18px;
     color: #3f3e3e;
-    width: 900px;
-    height: 500px;
-    text-align: center;
-    margin-left: 340px;
-    
+    width: 50vw;
+    min-width: 255px;
+}
+
+@media(max-width:430px){
+    .block-text h1{
+        padding: 2rem 15px;
+     }
+     
+     .block-text p {
+        padding: 0 15px;
+       
+     }
 }
