--- a/views/aboutme.handlebars
+++ b/views/aboutme.handlebars
@@ -3,7 +3,9 @@
     <link rel="stylesheet" href="/css/style-aboutme.css">
 </head>
 <body>
-    <div class="block-1">
+
+<main>
+     <section class="block-1">
         <div class="block-text1">
             <h1>
                 About <span>Me</span>
@@ -13,16 +15,16 @@
                  and i'm a IT student and a junior developer.
             </p>
         </div>
-    </div>
-    <div class="block-2">
         <div class="block-text2">
-            <ol>
+            <ul>
                 <h4>Knowledge of:</h4>
-                <li>Front end languages(html,css,JS)</li>
+                <li>FrontEnd languages(html,css,JS)</li>
                 <li>NodeJS</li>
                 <li>ReactJS</li>
                 <li>MongoDB</li>
                 <li>MySQL</li>
-            </ol>
+            </ul>
         </div>
-    </div>
+     </section>
+</main>
+   
