--- a/views/partials/_menu.handlebars
+++ b/views/partials/_menu.handlebars
@@ -1,20 +1,39 @@
 <head>
     <link rel="stylesheet" href="css/_menu.css">
 </head>
-<div class="menu">
-        <a class="first-img" href="/"><img src="/img/sCsiuBmt_400x400.png" alt="Robo 3T"></a>
-        <ol class="second-ol">
-            <li><a href="/">Robo 3T</a></li>
-        </ol>
-        <ol class="third-ol">
+    <nav class="menu">
+        <div class="main__nav--brand"><img src="/img/sCsiuBmt_400x400.png" alt="Robo 3T"> <a href="/">Robo 3T</a></div>
+        
+
+        <ul class="main__menu--itens">
             <li><a href="/download">Download</a></li>
             <li><a href="/Aboutme">About me</a></li>
             {{#if user}}
                 Welcome {{userData.firstName}} <br>
-                 <a href="/Logout">Logout</a>
+                <li><a href="/Logout">Logout</a></li>
             {{else}}
             <li><a id="Account" href="/Account">Account</a></li>
             {{/if}}
-        </ol>
-    </div>
+        </ul>
+        <button class="toggle__btn">
+            <span class="toggle__btn--span"></span>
+            <span class="toggle__btn--span"></span>
+            <span class="toggle__btn--span"></span>
+        </button>
+    </nav>
+
+    <section class="main__nav--responsive">
+         <ul class="main__responsivemenu--itens">
+            <li><a href="/download">Download</a></li>
+            <li><a href="/Aboutme">About me</a></li>
+            {{#if user}}
+                Welcome {{userData.firstName}} <br>
+                <li><a href="/Logout">Logout</a></li>
+            {{else}}
+            <li><a id="Account" href="/Account">Account</a></li>
+            {{/if}}
+        </ul>
+    </section>
     
+
+   <script src="/js/index.js"></script>
